Bug Fix: Enter VR button not showing up Why: Body got overflowed, so it pushed the button away Fix: Custom EnterVR Button Can happen?: May happen on big screens but tested with 4k pixels

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,15 @@ button {
 	cursor: pointer;
 }
 
+#enterVR {
+	font-size: 12px;
+	padding: 0;
+	height: 20px;
+	background-color: #4cd137;
+	color: #000;
+	outline: none;
+}
+
 #liveStatus {
 	margin-top: -1rem;
 	font-size: 12px;
